--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,8 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="/Users/isuru/Programming/jars/javax.json-1.0.4.jar"/>
+	<classpathentry kind="lib" path="/Users/isuru/Programming/jars/jackson-core-2.7.0.jar"/>
+	<classpathentry kind="lib" path="/Users/isuru/Programming/jars/jackson-databind-2.7.0.jar"/>
+	<classpathentry kind="lib" path="/Users/isuru/Programming/jars/jackson-annotations-2.7.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
