--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.warn</groupId>
 	<artifactId>java-ocr</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.2.0</version>
 	
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
