--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,11 @@
 	
 	<dependencies>
 		<dependency>
+			<groupId>org.warn</groupId>
+			<artifactId>java-util</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+		<dependency>
 			<groupId>javax.json</groupId>
 			<artifactId>javax.json-api</artifactId>
 			<version>1.0</version>
